--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -54,7 +54,7 @@ group vomss://voms.grid.iu.edu:8443/voms/osgedu osgedu
 group vomss://voms2.cern.ch:8443/voms/ops ops
 #-------------------
 # USER-VO-MAP ilc ILC -- 31 -- Lynn Garren (garren@fnal.gov)
-group vomss://voms.fnal.gov:8443/voms/ilc ilc
+group vomss://grid-voms.desy.de:8443/voms/ilc ilc
 #-------------------
 # USER-VO-MAP nysgrid NYSGRID -- 32 -- Steve Gallo (smgallo@ccr.buffalo.edu)
 group vomss://dylan.ccr.buffalo.edu:8443/voms/NYSGRID NYSGRID
