--- a/gums.template
+++ b/gums.template
@@ -1121,9 +1121,37 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
     <accountMapping className="gov.bnl.gums.GroupAccountMapper" groupName="dunegli"/>
 </groupMapping>
 
+<!-- 66 PROJECT8 -->
+
+<groupMapping name=“project8” accountingVo=“project8” accountingDesc=“project8”>
+<userGroup className="gov.bnl.gums.VOMSGroup"
+url="https://voms.hep.pnnl.gov:8443/voms/project8/services/VOMSAdmin"
+persistenceFactory="mysql"
+name=“project8” voGroup=“/project8”
+voRole=“project8”
+matchFQAN="exact"
+sslCertfile="/etc/grid-security/http/httpcert.pem"
+sslKey="/etc/grid-security/http/httpkey.pem"/>
+<accountMapping className="gov.bnl.gums.GroupAccountMapper"
+groupName=“project8”/>
+</groupMapping>
+
+<groupMapping name="project8_prod" accountingVo=“project8” accountingDesc=“project8”>
+<userGroup className="gov.bnl.gums.VOMSGroup"
+url="https://voms.hep.pnnl.gov:8443/voms/project8/services/VOMSAdmin"
+persistenceFactory="mysql"
+name="project8_prod" voGroup=“/project8/prod”
+voRole="project8_prod"
+matchFQAN="exact"
+sslCertfile="/etc/grid-security/http/httpcert.pem"
+sslKey="/etc/grid-security/http/httpkey.pem"/>
+<accountMapping className="gov.bnl.gums.GroupAccountMapper"
+groupName="project8_prod"/>
+</groupMapping>
+
 </groupMappings>
 
 <hostGroups>
-<hostGroup className="gov.bnl.gums.CertificateHostGroup" cn="*/?*.@DOMAINNAME@" groups="cdf-fnal,cdfdev-fnal,cdffgrid-fnal,cdfnam-fnal,cdftestcaf-fnal,cdf-cnaf,cdfdev-cnaf,cdffgrid-cnaf,cdfnam-cnaf,cdftestcaf-cnaf,cdf-pd,cdfdev-pd,cdffgrid-pd,cdfnam-pd,cdftestcaf-pd,fermilab,mis,star,uscmsuser,cmsuser,uscmst2admin,uscmssoft,cmssoft,uscmsprod,uscmsphedex,cmsphedex2,uscmsfrontier,cmsuser-null,cmsproduction,LIGO,dzerouser,dzeroana,dzeroservice,dosar,des,glow,nanohub,geant4,geant4-lcgadmin,osg,newUsatlasProd,newUsatlasSoft,newUsatlas,newAtlas,osgedu,ops,des-production,ilc,nysgrid,sbgrid,cigi,icecube,alice,gluex,gridunesp,hcc,belle,bellepro,suragrid,gcvo,gcedu,dream,lbne,lbne-production,lbneana,lbnegli,lsst,mcdrd,lqcd,auger,glast.org,enmr.eu,vo.cta.in2p3.fr,xenon.biggrid.nl,snoplus.snolab.ca,LZ,dune,dune-production,duneana,dunegli"/>
+<hostGroup className="gov.bnl.gums.CertificateHostGroup" cn="*/?*.@DOMAINNAME@" groups="cdf-fnal,cdfdev-fnal,cdffgrid-fnal,cdfnam-fnal,cdftestcaf-fnal,cdf-cnaf,cdfdev-cnaf,cdffgrid-cnaf,cdfnam-cnaf,cdftestcaf-cnaf,cdf-pd,cdfdev-pd,cdffgrid-pd,cdfnam-pd,cdftestcaf-pd,fermilab,mis,star,uscmsuser,cmsuser,uscmst2admin,uscmssoft,cmssoft,uscmsprod,uscmsphedex,cmsphedex2,uscmsfrontier,cmsuser-null,cmsproduction,LIGO,dzerouser,dzeroana,dzeroservice,dosar,des,glow,nanohub,geant4,geant4-lcgadmin,osg,newUsatlasProd,newUsatlasSoft,newUsatlas,newAtlas,osgedu,ops,des-production,ilc,nysgrid,sbgrid,cigi,icecube,alice,gluex,gridunesp,hcc,belle,bellepro,suragrid,gcvo,gcedu,dream,lbne,lbne-production,lbneana,lbnegli,lsst,mcdrd,lqcd,auger,glast.org,enmr.eu,vo.cta.in2p3.fr,xenon.biggrid.nl,snoplus.snolab.ca,LZ,dune,dune-production,duneana,dunegli,project8,project8_prod"/>
 </hostGroups>
 </gums>
