--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -140,4 +140,5 @@ group vomss://voms.hep.wisc.edu:8443/voms/lz lz
 #USER-VO-MAP dune DUNE -- 65 -- Thomas Robert Junk (trj@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/dune dune
 #-------------------
-
+#USER-VO-MAP project8 PROJECT8 -- 66 -- Malachi Schram (malachi.schram@pnnl.gov)
+group vomss://voms.hep.pnnl.gov:8443/voms/project8
