--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -139,3 +139,6 @@ group vomss://voms.fnal.gov:8443/voms/dune dune
 #-------------------
 #USER-VO-MAP project8 PROJECT8 -- 66 -- Malachi Schram (malachi.schram@pnnl.gov)
 group vomss://voms.hep.pnnl.gov:8443/voms/project8
+#-------------------
+#USER-VO-MAP miniclean MINICLEAN -- 67 -- Malachi Schram (malachi.schram@pnnl.gov)
+group vomss://voms.hep.pnnl.gov:8443/voms/miniclean
