--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -98,9 +98,6 @@ group vomss://gc-voms.javeriana.edu.co:8443/voms/gcedu gcedu
 #USER-VO-MAP dream DREAM - 51 - Alan Sill (Alan.Sill@ttu.edu)
 group vomss://voms.hpcc.ttu.edu:8443/voms/dream dream
 #-------------------
-#USER-VO-MAP lbne LBNE - 52 - Eileen Berman (berman@fnal.gov)
-group vomss://voms.fnal.gov:8443/voms/lbne lbne
-#-------------------
 #USER-VO-MAP lsst LSST - 53 - Gabriele Garzoglio (garzoglio@fnal.gov)
 group vomss://voms.fnal.gov:8443/voms/lsst lsst
 #-------------------
@@ -142,3 +139,6 @@ group vomss://voms.fnal.gov:8443/voms/dune dune
 #-------------------
 #USER-VO-MAP project8 PROJECT8 -- 66 -- Malachi Schram (malachi.schram@pnnl.gov)
 group vomss://voms.hep.pnnl.gov:8443/voms/project8
+#-------------------
+#USER-VO-MAP miniclean MINICLEAN -- 67 -- Malachi Schram (malachi.schram@pnnl.gov)
+group vomss://voms.hep.pnnl.gov:8443/voms/miniclean
