--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -21,6 +21,9 @@ group vomss://voms2.cern.ch:8443/voms/cms uscms01
 # USER-VO-MAP ligo LIGO -- 12 -- Patrick Brady (patrick@gravity.phys.uwm.edu)    
 group vomss://voms.opensciencegrid.org:8443/voms/osg?/osg/ligo ligo
 #-------------------
+# USER-VO-MAP cdf CDF -- 1 -- Dennis Box (dbox@fnal.gov)     
+group vomss://voms.fnal.gov:8443/voms/cdf cdf
+#-------------------
 # USER-VO-MAP dzero DZERO -- 13 -- Fermilab Service Desk (servicedesk@fnal.gov)  
 group vomss://voms.fnal.gov:8443/voms/dzero?/dzero/users samgrid
 group vomss://voms.fnal.gov:8443/voms/dzero?/dzero/services sam
