--- a/gums.config.template
+++ b/gums.config.template
@@ -336,16 +336,6 @@
 			sslCAFiles='/etc/grid-security/certificates/*.0'/>
 
 		<vomsServer
-			name='nysgrid'
-			description=''
-			persistenceFactory='mysql'
-			baseUrl='https://dylan.ccr.buffalo.edu:8443/voms/NYSGRID'
-			sslKey='/etc/grid-security/http/httpkey.pem'
-			sslCertfile='/etc/grid-security/http/httpcert.pem'
-			sslKeyPasswd=''
-			sslCAFiles='/etc/grid-security/certificates/*.0'/>
-
-		<vomsServer
 			name='ops'
 			description=''
 			persistenceFactory='mysql'
@@ -974,15 +964,6 @@
 			voGroup='/atlas/usatlas'/>
 
 		<vomsUserGroup
-			name='nysgrid'
-			access='read self'
-			description=''
-			vomsServer='nysgrid'
-			matchFQAN='vo'
-			acceptProxyWithoutFQAN='true'
-			voGroup='/nysgrid'/>
-
-		<vomsUserGroup
 			name='ops'
 			access='read self'
 			description=''
@@ -1325,11 +1306,6 @@
 			name='nanohub'
 			description=''
 			accountName='nanohub'/>
-
-		<groupAccountMapper
-			name='nysgrid'
-			description=''
-			accountName='nysgrid'/>
 
 		<groupAccountMapper
 			name='ops'
@@ -1837,14 +1813,6 @@
 			accountMappers='usatlas2'/>
 
 		<groupToAccountMapping
-			name='nysgrid'
-			description=''
-			accountingVoSubgroup='nysgrid'
-			accountingVo='NYSGRID'
-			userGroups='nysgrid'
-			accountMappers='nysgrid'/>
-
-		<groupToAccountMapping
 			name='ops'
 			description=''
 			accountingVoSubgroup='ops'
@@ -1985,7 +1953,7 @@
 	<hostToGroupMappings>
 
 		<hostToGroupMapping
-			groupToAccountMappings='cdf-fnal, cdfdev-fnal, cdffgrid-fnal, cdfnam-fnal, cdftestcaf-fnal, fermilab, mis, star, uscmsuser, cmsuser, uscmst2admin, uscmssoft, cmssoft, uscmsprod, uscmsphedex, cmsphedex2, uscmsfrontier, cmsuser-null, cmsproduction, LIGO, dzerouser, dzeroana, dzeroservice, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, osgedu, ops, des-production, ilc, nysgrid, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
+			groupToAccountMappings='cdf-fnal, cdfdev-fnal, cdffgrid-fnal, cdfnam-fnal, cdftestcaf-fnal, fermilab, mis, star, uscmsuser, cmsuser, uscmst2admin, uscmssoft, cmssoft, uscmsprod, uscmsphedex, cmsphedex2, uscmsfrontier, cmsuser-null, cmsproduction, LIGO, dzerouser, dzeroana, dzeroservice, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, osgedu, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
 			description=''
 			cn='*/?*.@DOMAINNAME@'/>
 
