drop osgedu from gums.config.template
https://ticket.opensciencegrid.org/33040
https://jira.opensciencegrid.org/browse/SOFTWARE-2643

--- a/gums.config.template
+++ b/gums.config.template
@@ -356,16 +356,6 @@
 			sslCAFiles='/etc/grid-security/certificates/*.0'/>
 
 		<vomsServer
-			name='osgedu'
-			description=''
-			persistenceFactory='mysql'
-			baseUrl='https://voms.grid.iu.edu:8443/voms/osgedu'
-			sslKey='/etc/grid-security/http/httpkey.pem'
-			sslCertfile='/etc/grid-security/http/httpcert.pem'
-			sslKeyPasswd=''
-			sslCAFiles='/etc/grid-security/certificates/*.0'/>
-
-		<vomsServer
 			name='project8'
 			description=''
 			persistenceFactory='mysql'
@@ -982,15 +972,6 @@
 			voGroup='/osg'/>
 
 		<vomsUserGroup
-			name='osgedu'
-			access='read self'
-			description=''
-			vomsServer='osgedu'
-			matchFQAN='vo'
-			acceptProxyWithoutFQAN='true'
-			voGroup='/osgedu'/>
-
-		<vomsUserGroup
 			name='project8'
 			access='read self'
 			description=''
@@ -1316,11 +1297,6 @@
 			name='osg'
 			description=''
 			accountName='osg'/>
-
-		<groupAccountMapper
-			name='osgedu'
-			description=''
-			accountName='osgedu'/>
 
 		<groupAccountMapper
 			name='project8'
@@ -1829,14 +1805,6 @@
 			accountMappers='osg'/>
 
 		<groupToAccountMapping
-			name='osgedu'
-			description=''
-			accountingVoSubgroup='osgedu'
-			accountingVo='OSGEDU'
-			userGroups='osgedu'
-			accountMappers='osgedu'/>
-
-		<groupToAccountMapping
 			name='project8'
 			description=''
 			accountingVoSubgroup='project8'
@@ -1953,7 +1921,7 @@
 	<hostToGroupMappings>
 
 		<hostToGroupMapping
-			groupToAccountMappings='cdf-fnal, cdfdev-fnal, cdffgrid-fnal, cdfnam-fnal, cdftestcaf-fnal, fermilab, mis, star, uscmsuser, cmsuser, uscmst2admin, uscmssoft, cmssoft, uscmsprod, uscmsphedex, cmsphedex2, uscmsfrontier, cmsuser-null, cmsproduction, LIGO, dzerouser, dzeroana, dzeroservice, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, osgedu, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
+			groupToAccountMappings='cdf-fnal, cdfdev-fnal, cdffgrid-fnal, cdfnam-fnal, cdftestcaf-fnal, fermilab, mis, star, uscmsuser, cmsuser, uscmst2admin, uscmssoft, cmssoft, uscmsprod, uscmsphedex, cmsphedex2, uscmsfrontier, cmsuser-null, cmsproduction, LIGO, dzerouser, dzeroana, dzeroservice, dosar, des, glow, nanohub, geant4, geant4-lcgadmin, osg, newUsatlasProd, newUsatlasSoft, newUsatlas, newAtlas, ops, des-production, ilc, sbgrid, cigi, icecube, alice, gluex, gridunesp, hcc, belle, bellepro, suragrid, gcvo, gcedu, dream, lsst, lqcd, auger, glast.org, enmr.eu, vo.cta.in2p3.fr, xenon.biggrid.nl, snoplus.snolab.ca, LZ, dune, dune-production, duneana, dunegli, project8, project8_prod, miniclean, miniclean_prod'
 			description=''
 			cn='*/?*.@DOMAINNAME@'/>
 
